9811
Also, could somebody please explain the "illegal inheritance; self-type ..." type error to me? I also get it in 2.10.2 when removing the second parameter list:
{noformat}
    class ResultTable[E](query : Either[_,E])
    new ResultTable(Left(5):Either[_,_]){}
{noformat}

{noformat}
<console>:10: error: illegal inheritance;
 self-type ResultTable[_$3] does not conform to ResultTable[_$3]'s selftype ResultTable[_$3]
                  new ResultTable(Left(5):Either[_,_]){}
                      ^
<console>:10: error: type mismatch;
 found   : Either[_$2,_$3(in constructor $anon)] where type _$3(in constructor $anon), type _$2
 required: Either[_, _$3(in value res0)] where type _$3(in value res0)
                  new ResultTable(Left(5):Either[_,_]){}
                                         ^
{noformat}
